--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightblue;
+    background-color: blue;
   }
   
   @media screen and (min-width: 400px) {
@@ -17,7 +17,9 @@ body {
 img {
     width: 100px;
 }
-
+ul {
+    list-style-image: url("track.jpg");
+  }
 
 li:hover{
     transform: scale(0.92);
@@ -30,19 +32,22 @@ h2:hover, h3:hover {
 a {
     color: brown;
 }
+
 h1 {
-   
-    background-color: blue;
+    background-color: greenyellow;
+    text-align: center;
+    height: 200px;
     animation-name: h1-animation;
     animation-duration: 3s;
     animation-iteration-count: 1;
+
 }
       
       @keyframes h1-animation {
-        0%   {background-color: blue;}
+        0%   {background-color: green;}
         25%  {background-color: yellow;}
         50%  {background-color: red;}
-        100% {background-color: green;}
+        100% {background-color: blue;}
       }
 
 p {
@@ -57,10 +62,47 @@ div {
     animation: mymove 2s;
     position: relative;
     transition: transform 0.6s;
-    transform-style: preserve-3d;
-    
+    transform-style: preserve-3d;    
 }
 
         @keyframes mymove {
         50% {transform: rotateX(180deg);}
+}
+
+ul {
+    list-style-image: url("images/tiny-coffee-cup.gif");
+  }
+  a:link, a:visited{
+    text-decoration: none;
+    color: brown;
+    font-weight: bold;
+  }
+  a:hover{
+    color: black;
+  }
+  nav ul{
+    display: flex;
+    padding: 0;
+  }
+  nav li{
+    display: inline;
+    float: left;
+  }
+  nav a:link, nav a:visited {
+    background-color: brown;
+    color: white;
+    display: block;
+    width: 202px;
+    text-align: center;
+    padding: 10px;
+  }
+  nav a:hover{
+    background-color: black;
+    }
+footer {
+    text-align: center;
+}
+
+footer ul {
+    list-style-type: none;
 }
