--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     left: auto;
   }
   
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 300px) {
     body {
       background-color: lightgreen;
     }
@@ -23,7 +23,7 @@ li:hover{
 }
 
 h1 {
-  color: red;
+  color: white;
   text-align: left;
   background: url(track.jpeg);
   height: 200px;
