--- a/style.css
+++ b/style.css
@@ -44,49 +44,19 @@ a {
 
 
 section {
-    position: relative;
-    text-align: center;
-    margin: 2px;
-    padding: 4px;
+  margin-top: 50px;
+  width: 90%;
+  margin-left: 5%;
+  padding: 50px;
+  box-sizing: border-box;
+  background-color: #084B8A;
+  border-radius: 5px;
+  color: white;
 }
 
-div {
-    width: 100px;
-    height: 100px;
-    animation: mymove 2s;
-    position: relative;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;    
+li {
+  list-style-type: none;
 }
-
-        @keyframes mymove {
-        50% {transform: rotateX(180deg);}
-}
-
-
-  a:hover{
-    color: black;
-  }
-
-  nav ul{
-    display: flex;
-    padding: 1px;
-  }
-  nav li{
-    display: inline;
-    float: left;
-  }
-  nav a:link, nav a:visited {
-    background-color: blue;
-    color: whitesmoke;
-    display: flex;
-    width: 202px;
-    text-align: center;
-    padding: 10px;
-  }
-  nav a:hover{
-    background-color: black;
-    }
 footer {
     position: static;
     text-align: center;
