--- a/style.css
+++ b/style.css
@@ -48,18 +48,19 @@ section {
   margin-left: 5%;
   padding: 50px;
   box-sizing: border-box;
-  background-color: orangered;
+  background-color: lightgreen;
   border-radius: 5px;
   color: white;
 }
 
-nav ul li {
-  list-style-type: none;
-  background-color: orangered;
+.navigation {
+  border: 1px solid;
   border-radius: 5px;
-  margin-top: 5px;
-  margin-left: 3%;
-  width: 90%;
+  background-color: lightseagreen;
+  margin: 5px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer {
